# python-project-lvl1

./: .Makefile.swp  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml  superlinter.yml
brain_games/: cli.py  start_game.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
